Empty translations should occupy vertical space to prevent jumping on save (#1481)

--- a/frontend/src/modules/entitieslist/components/Entity.css
+++ b/frontend/src/modules/entitieslist/components/Entity.css
@@ -41,6 +41,7 @@
 
 .entity .translation-string {
     color: #AAAAAA;
+    min-height: 20px;
     text-align: start;
 }
 
